2011-04-30  Tobias Burnus  <burnus@net-b.de>

PR fortran/48800
        * decl.c (gfc_match_import): Don't try to find the
        symbol if already found.

2011-04-30  Tobias Burnus  <burnus@net-b.de>

        PR fortran/48800
        * gfortran.dg/interface_37.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@173219 138bc75d-0d04-0410-961f-82ee72b054a4